--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="font-size: 16px;">
+<html style="font-size: 16px;" xmlns:th="https://thymeleaf.org">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
@@ -10,8 +10,8 @@
     <title>Home</title>
     <link rel="stylesheet" th:href="@{Style.css}" media="screen">
     <link rel="stylesheet" th:href="@{Home.css}" media="screen">
-    <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="Style.js" defer=""></script>
+    <script class="u-script" type="text/javascript" th:src="@{jquery.js}" defer=""></script>
+    <script class="u-script" type="text/javascript" th:src="@{Style.js}" defer=""></script>
     <link id="u-theme-google-font" rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
     <script type="application/ld+json">{
@@ -24,8 +24,7 @@
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
 </head>
-<body data-home-page="Home.html" data-home-page-title="Home"
-      class="u-body u-overlap u-overlap-contrast u-overlap-transparent">
+<body class="u-body u-overlap u-overlap-contrast u-overlap-transparent">
 <header class="u-clearfix u-header u-header" id="sec-c16b">
     <div class="u-clearfix u-sheet u-sheet-1">
         <a href="#" class="u-image u-logo u-image-1" src="">
@@ -41,21 +40,26 @@
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"
                          id="svg-7b92" x="0px" y="0px" viewBox="0 0 302 302" style="enable-background:new 0 0 302 302;"
                          xml:space="preserve" class="u-svg-content">
-                        <g><rect y="36" width="302" height="30"></rect><rect
-                            y="236" width="302" height="30"></rect><rect y="136" width="302" height="30"></rect>
+                        <g><rect y="36" width="302" height="30"></rect>
+                            <rect
+                                    y="236" width="302" height="30"></rect>
+                            <rect y="136" width="302" height="30"></rect>
                         </g>
                     </svg>
                 </a>
             </div>
             <div class="u-custom-menu u-nav-container">
                 <ul class="u-nav u-spacing-25 u-unstyled">
-                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html"
+                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="/"
                                               style="padding: 8px 0px;">Home</a>
                     </li>
-                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html"
+                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="/guest"
+                        style="padding: 8px 0px;">Guest</a>
+                    </li>
+                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="/about"
                                               style="padding: 8px 0px;">About</a>
                     </li>
-                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html"
+                    <li class="u-nav-item"><a class="u-button-style u-nav-link" href="/contact"
                                               style="padding: 8px 0px;">Contact</a>
                     </li>
                 </ul>
@@ -65,13 +69,16 @@
                     <div class="u-inner-container-layout u-sidenav-overflow">
                         <div class="u-menu-close"></div>
                         <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2">
-                            <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html"
+                            <li class="u-nav-item"><a class="u-button-style u-nav-link" href="/"
                                                       style="padding: 8px 0px;">Home</a>
                             </li>
-                            <li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html"
+                            <li class="u-nav-item"><a class="u-button-style u-nav-link" href="/guest"
+                                style="padding: 8px 0px;">Guest</a>
+                            </li>
+                            <li class="u-nav-item"><a class="u-button-style u-nav-link" href="/about"
                                                       style="padding: 8px 0px;">About</a>
                             </li>
-                            <li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html"
+                            <li class="u-nav-item"><a class="u-button-style u-nav-link" href="/contact"
                                                       style="padding: 8px 0px;">Contact</a>
                             </li>
                         </ul>
@@ -80,7 +87,8 @@
                 <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
             </div>
         </nav>
-        <a class="u-align-right u-login u-login-1">Login</a>
+        <a class="u-align-right u-login u-login-1" href="/login">Login</a>
+        <a class="u-align-right u-login u-login-1" href="/registration">Registration</a>
     </div>
 </header>
 <section class="u-clearfix u-image u-shading u-section-1" id="sec-30b4">
@@ -539,7 +547,7 @@
                                 <div class="u-container-layout">
                                     <h2 class="u-custom-font u-font-georgia u-text u-text-1">Nur-Sultan, Kazakhstan</h2>
                                     <p class="u-text u-text-2">Qabanbay Batyr Ave. 56<br>012345678<br>
-                                        <a href="mailto:contacts@esbnyc.com">contacts@g</a>mail.com<br>
+                                        <a href="mailto:contacts@gmail.com">contacts@gmail.com</a><br>
                                     </p>
                                     <img src="images/NU.png" alt=""
                                          class="u-image u-image-contain u-image-default u-image-1"
